--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
@@ -16,6 +17,7 @@
     "framer-motion": "^11.3.24",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
+    "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
