--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
+    "gsap": "^3.12.5",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
     "qss": "^3.0.0",
